--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=7,IE=9" /> 
 
     <title>Population Density Map</title>
-    <link rel="icon" type="image/png" href="/images/COfavicon2.png">
+    <link rel="icon" type="image/png" href="images/COfavicon2.png">
     <link rel="stylesheet" href="https://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/dojo/dijit/themes/claro/claro.css">
     <link rel="stylesheet" href="https://serverapi.arcgisonline.com/jsapi/arcgis/3.3/js/esri/css/esri.css">
-        <link rel="stylesheet" href="/css/layout.css">
+        <link rel="stylesheet" href="css/layout.css">
 		
 	  <!-- Make sure your CSS file is listed before jQuery -->
-<link rel="stylesheet" href="/css/uniform.aristo.css" media="screen" />
-		<script src="/js/jquery-1.9.1.js"></script>
-	<script src="/js/jquery-ui.js"></script>
-<script src="/js/jquery.uniform.min.js"></script>
+<link rel="stylesheet" href="css/uniform.aristo.css" media="screen" />
+		<script src="js/jquery-1.9.1.js"></script>
+	<script src="js/jquery-ui.js"></script>
+<script src="js/jquery.uniform.min.js"></script>
 
 	  
 <!--[if IE]>
@@ -25,7 +25,7 @@
 </style>
 <![endif]-->
 
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
 	
 	<script>
 		var dojoConfig = { parseOnLoad: true };
@@ -33,7 +33,7 @@
 	
     <script src="https://js.arcgis.com/3.7/"></script>
 
-    <script src="/js/density.js"></script>
+    <script src="js/density.js"></script>
  
     
   </head>
